# projeto-cdc-unifecaf-1-semestre

./: docker-compose.yml  pyproject.toml  seeder.sql  setup.sql  shell.nix
database-modeling/: Modelagem conceitual BD.xml  Modelagem lógica BD.xml
src/: cli.py  gui.py  main.py  mysql_connection.py  seed.py  setup.py  style.css
src/entities/: address.py  cart.py  category.py  order.py  product.py  user.py
src/ui/: main_window.ui  orders_page.ui  products_page.ui  users_page.ui
